--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- <link href="/dist/index.css" rel="stylesheet"> -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
